<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ContactActivity" >

    <TextView
        android:id="@+id/title_contact_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_contact_string" />

    <TextView
        android:id="@+id/name_contact_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/title_contact_textview"
        android:layout_below="@id/title_contact_textview"
        android:layout_marginTop="15dp"
        android:text="@string/name_contact_text_string" />

    <EditText
        android:id="@+id/name_contact_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/name_contact_textview"
        android:layout_below="@id/name_contact_textview"
        android:ems="10"
        android:text="@string/name_contact_edit_string" />
        
     <requestFocus />

     <TextView
	     android:id="@+id/phone_contact_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/phone_contact_edittext"
         android:layout_below="@id/name_contact_edittext"
         android:layout_marginTop="24dp"
         android:text="@string/phone_contact_text_string" />

     <EditText
     	android:id="@+id/phone_contact_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/name_contact_edittext"
        android:layout_below="@id/phone_contact_textview"
        android:ems="10"
        android:text="@string/phone_contact_edit_string" />

    <Button
        android:id="@+id/salvar_contact_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/phone_contact_edittext"
        android:layout_centerVertical="true"
        android:layout_below="@id/phone_contact_edittext"
        android:onClick="salvarButton"
        android:text="@string/salvar_contact_button_string" />

    <TextView
        android:id="@+id/confirm_contact_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/salvar_contact_button"
        android:layout_below="@id/salvar_contact_button"
        android:layout_marginTop="15dp" />


</RelativeLayout>
