<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >
    
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin">
	
	    <TextView
	        android:id="@+id/title_alarm_textview"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/salvar_alarm_button"
	        android:layout_alignParentTop="true"
	        android:text="@string/title_alarm_text_string"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <TextView
	        android:id="@+id/medicine_name_alarm_textview"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/title_alarm_textview"
	        android:text="@string/medicine_name_alarm_text_string"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/medicine_name_alarm_edittext"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/medicine_name_alarm_textview"
	        android:ems="10" />
	
	    <TextView
	        android:id="@+id/num_pills_dose_alarm_textview"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/medicine_name_alarm_edittext"
	        android:text="@string/num_pills_dose_alarm_text_string" />
	    
	    <EditText
	        android:id="@+id/num_pills_dose_alarme_edittext"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/num_pills_dose_alarm_textview"
	        android:ems="10" />
	    
	    <TextView
	        android:id="@+id/num_pills_box_alarm_textview"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/num_pills_dose_alarme_edittext"
	        android:text="@string/num_pills_box_alarm_text_string" />
	    
	    <EditText
	        android:id="@+id/num_pills_box_alarm_edittext"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/num_pills_box_alarm_textview"
	        android:ems="10" />
	    
	    <TextView
	        android:id="@+id/num_dosis_alarm_textview"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/num_pills_box_alarm_edittext"
	        android:text="@string/num_dosis_alarm_text_string" />
	    
	    <EditText
	        android:id="@+id/num_dosis_edittext"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/num_dosis_alarm_textview"
	        android:ems="10" />
	    
	    <TextView
	        android:id="@+id/first_dosis_time_alarm_textview"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/num_dosis_edittext"
	        android:text="@string/first_dosis_time_alarm_text_string" />
	    
	    <EditText
	        android:id="@+id/first_dosis_time_alarm_edittext"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/first_dosis_time_alarm_textview"
	        android:ems="10" />
	    
	    <TextView
	        android:id="@+id/interval_dosis_alarm_textview"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/first_dosis_time_alarm_edittext"
	        android:text="@string/interval_dosis_alarm_text_string" />
	    
	    <EditText
	        android:id="@+id/interval_dosis_alarm_edittext"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/interval_dosis_alarm_textview"
	        android:ems="10" />
	   
	    <Button
	        android:id="@+id/salvar_alarm_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/interval_dosis_alarm_edittext"
	        android:layout_marginBottom="72dp"
	        android:text="@string/salvar_alarm_button_string" 
	        android:onClick="salvarAlarmeButton" />
	
	        <requestFocus />
	</RelativeLayout>
</ScrollView>