<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DiarioActivity" >

    <TextView
        android:id="@+id/title_diario_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_diario_string" />
	
	<TextView
	    android:id="@+id/confirm_diario_textview"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/salvar_diario_button"
	    android:layout_below="@+id/salvar_diario_button" />
	
	<Button
	    android:id="@+id/ler_diario_button"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignRight="@+id/log_diario_edittext"
	    android:layout_below="@+id/confirm_diario_textview"
	    android:layout_marginTop="45dp"
	    android:text="@string/ler_diario_text_string" 
	    android:onClick="lerDiarioButton" />

	<Button
	    android:id="@+id/salvar_diario_button"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/log_diario_edittext"
	    android:layout_below="@+id/log_diario_edittext"
	    android:onClick="botaoEscrever"
	    android:text="@string/salvar_text_string" />

	<EditText
	    android:id="@+id/log_diario_edittext"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/title_diario_textview"
	    android:layout_below="@+id/title_diario_textview"
	    android:hint="@string/edit_message_string" />
	   
</RelativeLayout>